--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </li>
         <li><a href="#faq">Faq</a></li>
         <li><a href="#contato">Contato</a></li>
-        <li><a data-modal="abrir" href="login.html">Login →</a></li>
+        <li><a data-modal="abrir" href="">Login →</a></li>
       </ul>
     </nav>
 
