resolvendo bugs gerais

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
         </li>
         <li><a href="#faq">Faq</a></li>
         <li><a href="#contato">Contato</a></li>
-        <li><a data-modal="abrir" href="">Login →</a></li>
+        <li>
+          <a data-modal="abrir" href="">Login <span class="arrow-black"></span></a>
+        </li>
       </ul>
     </nav>
 
@@ -167,7 +169,7 @@
       </dl>
     </section>
 
-    <section class="grid-sections galeria" data-anime="scroll">
+    <section class="grid-section galeria" data-anime="scroll">
       <ul class="custom-controls">
         <li><img src="img/slide/foto1-thumb.jpg" alt=""></li>
         <li><img src="img/slide/foto2-thumb.jpg" alt=""></li>
@@ -217,7 +219,7 @@
   </div>
   <section class="modal-container" data-modal="container">
     <div class="modal">
-      <button class="fechar" data-modal="fechar">X</button>
+      <button class="fechar" data-modal="fechar"></button>
       <form action="">
         <label for="email">Email</label>
         <input type="text" for="email" id="email">
